fix for header still being clickable after it is hidden on mobile

--- a/css/ipl.css
+++ b/css/ipl.css
@@ -230,6 +230,7 @@ header {
 @media (max-width: 800px) {
     .socials-nav-wrapper[aria-expanded="false"] {
         opacity: 0;
+        visibility: hidden;
     }
 
     .socials-nav-wrapper {
